--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -20,6 +20,6 @@
 @if (Model.Status.CanShareApplications())
 {
     <p class="small-btm-margin">
-        @Html.RouteLink("Show applications", RecruitmentRouteNames.ShareApplications, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
+        @Html.RouteLink("Share applications", RecruitmentRouteNames.ShareApplications, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
     </p>
 }
