--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -20,6 +20,7 @@
 @Html.HiddenFor(m => m.VacancyType)
 @Html.HiddenFor(m => m.WarningsHash)
 @Html.HiddenFor(m => m.ComeFromPreview)
+@Html.HiddenFor(m => m.VacancySource)
 
 <section>
     <div class="form-group">
