--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
@@ -17,6 +17,7 @@
 @Html.HiddenFor(m => m.Status)
 @Html.HiddenFor(m => m.VacancyType)
 @Html.HiddenFor(m => m.ComeFromPreview)
+@Html.HiddenFor(m => m.VacancySource)
 
 <section>
     <div class="form-group">
