--- a/src/SFA.Apprenticeships.Web.Recruit/Views/EmployerApplication/LinkExpired.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/EmployerApplication/LinkExpired.cshtml
@@ -2,5 +2,6 @@
     ViewBag.Title = "Link Expired";
 }
 
-<h2>Link Expired</h2>
+<h2>This link has expired</h2>
 
+<p>Contact the provider if you would like to be re-sent this link.</p>
