US2029: Bug fixes

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/_VacancyLinks.cshtml
@@ -17,7 +17,7 @@
         <a href="">Withdraw this @vacancyTypeText</a>
     </p>-->
 }
-@if (Model.Status.CanShareApplications())
+@if (Model.Status.CanShareApplications(Model.TotalNumberOfApplications))
 {
     <p class="small-btm-margin">
         @Html.RouteLink("Share applications", RecruitmentRouteNames.ShareApplications, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "disp-block" })
