Make ckeditor override the cdn content.css with local content.css

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -141,7 +141,8 @@
 <script src="~/Content/_assets/js/vendor/nanospell/autoload.js"></script>
 <script>  
     CKEDITOR.replace('LongDescription', {
-        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
+        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+        contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
     });    
 </script>
 
