--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
@@ -57,15 +57,18 @@
 <script>    
     CKEDITOR.replace('DesiredSkills',
     {
-        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
+        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+        contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
     });
     CKEDITOR.replace('DesiredQualifications',
     {
-        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
+        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+        contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
     });
     CKEDITOR.replace('PersonalQualities',
     {
-        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
+        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+        contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
     });
 </script>
 
