Hide HTML control for Desired qualifications for Traineeships.

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/RequirementsProspects.cshtml
@@ -54,15 +54,22 @@
 </script>
 
     <script src="~/Content/_assets/js/vendor/nanospell/autoload.js"></script>
-<script>    
+<script>
+    var isApprenticeship;
+    isApprenticeship = "@(Model.VacancyType == VacancyType.Apprenticeship)";
+
     CKEDITOR.replace('DesiredSkills',
     {
         customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
     });
-    CKEDITOR.replace('DesiredQualifications',
-    {
-        customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
-    });
+
+    if (isApprenticeship === "True"){
+        CKEDITOR.replace('DesiredQualifications',
+        {
+            customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
+        });
+    }
+
     CKEDITOR.replace('PersonalQualities',
     {
         customConfig: '/Content/_assets/js/vendor/ckeditor/config.js'
