Created anonymous layout for anonymous pages.  This introduces an acceptable level of duplication

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/EmployerApplication/ViewAnonymisedTraineeship.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/EmployerApplication/ViewAnonymisedTraineeship.cshtml
@@ -6,6 +6,7 @@
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Traineeship.TraineeshipApplicationViewModel
 
 @{
+    Layout = "~/Views/Shared/_AnonymousLayout.cshtml";
     ViewBag.Title = "Recruit an Apprentice - View application";
 }
 
