--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -132,9 +132,11 @@
 
 <!---->
 <script src="https://cdn.ckeditor.com/4.5.10/standard/ckeditor.js"></script>
+<script src="https://cdn.ckeditor.com/4.5.10/standard/adapters/jquery.js"></script>
 <script>
     if (typeof CKEDITOR == 'undefined') {
         document.write(unescape("%3Cscript src='/Content/_assets/js/vendor/ckeditor/ckeditor.js' type='text/javascript'%3E%3C/script%3E"));
+        document.write(unescape("%3Cscript src='/Content/_assets/js/vendor/ckeditor/adapters/jquery.js' type='text/javascript'%3E%3C/script%3E"));
     }
 </script>
  
