--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/OnBoardingComplete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/OnBoardingComplete.cshtml
@@ -1,10 +1,11 @@
 ﻿@model dynamic
 @{
     ViewBag.Title = "Thank you for on-boarding.";
+    ViewBag.ShowHomeLink = false;
 }
 
 <h1 id="h1header" class="heading-xlarge">Thank you for signing up</h1>
 
-<p>Thank you for signing-up to Recruit an apprentice.</p>
+<p>Thank you for signing up to Recruit an apprentice.</p>
 <p>We will email you when you can start using the new service.</p>
-<p>In the meantime, continue to use Apprenticeship vacancies as normal.</p>
+<p>Please continue to use <a href="https://apprenticeshipvacancymatchingservice.lsc.gov.uk/navms/Forms/Candidate/VisitorLanding.aspx">Apprenticeship vacancies</a> as normal.</p>
