RA-27: initial view changes.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ManageDates.cshtml
@@ -4,7 +4,7 @@
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.VacancyDatesViewModel
     
 @{
-    ViewBag.Title = "Recruit an Apprentice - Manage vacancy dates";
+    ViewBag.Title = "Recruit an Apprentice - Change vacancy dates";
 }
 
 <h1 class="heading-xlarge">
