--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/RequirementsAndProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/RequirementsAndProspects.cshtml
@@ -1,4 +1,5 @@
 ﻿@model VacancyRequirementsProspectsViewModel
+@using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
 @using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 
@@ -10,4 +11,50 @@
         <button type="submit" class="button">Save</button>
         @Html.RouteLink("Cancel", ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
     </div>
+}
+
+
+@section scripts
+{
+    <script src="https://cdn.ckeditor.com/4.5.10/standard/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/4.5.10/standard/adapters/jquery.js"></script>
+    <script>
+        if (typeof CKEDITOR == 'undefined') {
+            document.write(unescape("%3Cscript src='/Content/_assets/js/vendor/ckeditor/ckeditor.js' type='text/javascript'%3E%3C/script%3E"));
+            document.write(unescape("%3Cscript src='/Content/_assets/js/vendor/ckeditor/adapters/jquery.js' type='text/javascript'%3E%3C/script%3E"));
+        }
+    </script>
+
+    <script src="~/Content/_assets/js/vendor/nanospell/autoload.js"></script>
+    <script>
+
+        var isApprenticeship;
+        isApprenticeship = "@(Model.VacancyType == VacancyType.Apprenticeship)";
+
+        CKEDITOR.replace('DesiredSkills',
+        {
+            customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+            contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
+        });
+
+        if (isApprenticeship === "True") {
+            CKEDITOR.replace('DesiredQualifications',
+            {
+                customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+                contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
+            });
+        }
+
+        CKEDITOR.replace('PersonalQualities',
+        {
+            customConfig: '/Content/_assets/js/vendor/ckeditor/config.js',
+            contentsCss: '/Content/_assets/js/vendor/ckeditor/contents.css'
+        });
+
+        nanospell.ckeditor('all',
+        {
+            dictionary: "en_uk", // 24 free international dictionaries
+            server: "asp.net" // can be php, asp, asp.net or java
+        });
+    </script>
 }
