--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -91,12 +91,15 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="button" name="Review" value="ReviewAppointCandidate">
-                        Send successful decision
-                    </button>
+                    <button type="submit" class="button" name="Review" value="ReviewSaveAndExit">Save and exit</button>
+
                     <p class="med-btm-margin">
-                        <button type="submit" class="button-link" name="Review" value="ReviewRejectCandidate">Send unsuccessful decision</button>
-                        <button type="submit" class="button-link" name="Review" value="ReviewSaveAndExit">Save and exit</button>
+                        <button type="submit" class="button-link" name="Review" value="ReviewRejectCandidate">
+                            Send unsuccessful decision
+                        </button>
+                        <button type="submit" class="button-link" name="Review" value="ReviewAppointCandidate">
+                            Send successful decision
+                        </button>
                     </p>
                 </div>
             </section>
