Added provider user onboarding count to info rad

--- a/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
@@ -6,6 +6,19 @@
 <section>
     <h1 class="heading-xlarge">Information radiator</h1>
     <div class="grid-wrapper" style="Margin-Bottom: 20px">
+        <h2 class="heading-medium">Providers</h2>
+        <ul class="vacancies-summary">
+            <li>
+                <figure class="data">
+                    <p class="count">@Model.TotalProviderUserAccounts</p>
+                    <figcaption>
+                        <h2>Total provider users onboarded</h2>
+                    </figcaption>
+                </figure>
+            </li>
+        </ul>
+    </div>
+    <div class="grid-wrapper" style="Margin-Bottom: 20px">
         <h2 class="heading-medium">Vacancies</h2>
         <ul class="vacancies-summary">
             <li>
