Added onboarded providers count to info rad

--- a/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
@@ -10,6 +10,14 @@
         <ul class="vacancies-summary">
             <li>
                 <figure class="data">
+                    <p class="count">@Model.TotalProviders</p>
+                    <figcaption>
+                        <h2>Total providers onboarded</h2>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="data">
                     <p class="count">@Model.TotalProviderUserAccounts</p>
                     <figcaption>
                         <h2>Total provider users onboarded</h2>
