DE238: do not scroll to search results when [selecting | linking to new] employer.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
@@ -38,7 +38,7 @@
             </div>
         }
 
-        <section class="clearfix" id="providerSiteResults">
+        <section class="clearfix">
             <h2 class="heading-small">Employers</h2>
             <div class="grid grid-3-3 scrolling-panel max-height-15">
                 <table>
