Added missing parameters for registered candidate report

--- a/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/InformationRadiator/Index.cshtml
@@ -52,6 +52,14 @@
         <ul class="vacancies-summary">
             <li>
                 <figure class="data">
+                    <p class="count">@Model.TotalApplicationsStartedForRaaVacancies</p>
+                    <figcaption>
+                        <h2>Total started for recruit vacancies</h2>
+                    </figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure class="data">
                     <p class="count">@Model.TotalApplicationsSubmittedForRaaVacancies</p>
                     <figcaption>
                         <h2>Total submitted for recruit vacancies</h2>
