--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/RegisteredCandidatesCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/RegisteredCandidatesCsv.cshtml
@@ -30,6 +30,46 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Type, new SelectList(Model.TypeList, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div id="type-1" class="form-group" style="display: none;">
+            @Html.LabelFor(model => model.Region, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.Region, new SelectList(Model.RegionList, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.Region, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div id="type-2" class="form-group" style="display: none;">
+            @Html.LabelFor(model => model.LocalAuthority, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.LocalAuthority, new SelectList(Model.LocalAuthoritiesList, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.LocalAuthority, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.AgeRange, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.AgeRange, new SelectList(Model.AgeRangeList, "Value", "Text"))
+                @Html.ValidationMessageFor(model => model.AgeRange, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MarketMessagesOnly, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.CheckBoxFor(model => model.MarketMessagesOnly)
+                @Html.ValidationMessageFor(model => model.MarketMessagesOnly, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <button id="btnValidate" type="submit" class="button" name="RegisteredCandidatesCsv" value="ValidateRegisteredCandidatesCsv">Get CSV Link</button>
                 @if (Model.IsValid)
@@ -47,4 +87,14 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        $(function() {
+            $('#Type')
+                .change(function() {
+                    $('#type-1').hide();
+                    $('#type-2').hide();
+                    $('#type-' + this.value).show();
+                });
+        });
+    </script>
 }
