--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
@@ -68,16 +68,20 @@
 
             <table class="vert-top" id="applicationTable">
                 <colgroup>
-                    <col class="t30">
-                    <col class="t25">
-                    <col class="t15">
-                    <col class="t15">
-                    <col class="t15">
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
                 </colgroup>
                 <thead>
                 <tr>
                     <th>
-                        <span class="font-black">Applicant name</span>
+                        <span class="font-black">Surname</span>
+                    </th>
+                    <th>
+                        <span class="font-black">First name</span>
                     </th>
                     <th>
                         <span class="font-black">Applicant ID</span>
@@ -101,7 +105,10 @@
                 {
                     <tr class="applicant">
                         <td>
-                            <h4 class="applicant-name">@applicationSummary.ApplicantName</h4>
+                            <h4 class="applicant-name">@applicationSummary.LastName</h4>
+                        </td>
+                        <td>
+                            <h4 class="applicant-name">@applicationSummary.FirstName</h4>
                         </td>
                         <td>
                             @applicationSummary.ApplicantID
