--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
@@ -18,6 +19,8 @@
 
     @Html.HiddenFor(m => m.VacancyApplicationsSearch.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.VacancyApplicationsSearch.FilterType)
+    @Html.HiddenFor(m => m.VacancyApplicationsSearch.OrderByField)
+    @Html.HiddenFor(m => m.VacancyApplicationsSearch.Order)
 
     <div>
         <section>
@@ -109,7 +112,7 @@
                     Applications
                     @if (filterType != VacancyApplicationsFilterTypes.All)
                     {
-                        <span>&nbsp;<a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.All))" class="font-small vacancy-filter">Show all</a></span>
+                        <span>&nbsp;<a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.All).RouteValues)" class="font-small vacancy-filter">Show all</a></span>
                     }
                 </h2>
             </div>
@@ -126,7 +129,7 @@
                         }
                         else
                         {
-                            <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.New))" class="vacancy-filter">
+                            <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.New).RouteValues)" class="vacancy-filter">
                                 <figure class="data">
                                     <p class="count">@Model.NewApplicationsCount</p>
                                     <figcaption><h2>New</h2></figcaption>
@@ -144,7 +147,7 @@
                         }
                         else
                         {
-                            <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.Viewed))" class="vacancy-filter">
+                            <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.Viewed).RouteValues)" class="vacancy-filter">
                                 <figure class="data">
                                     <p class="count">@Model.ViewedApplicationsCount</p>
                                     <figcaption><h2>Viewed</h2></figcaption>
@@ -165,7 +168,7 @@
                             }
                             else
                             {
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.Successful))" class="vacancy-filter">
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.Successful).RouteValues)" class="vacancy-filter">
                                     <figure class="data">
                                         <p class="count">@Model.SuccessfulApplicationsCount</p>
                                         <figcaption><h2>Successful</h2></figcaption>
@@ -183,7 +186,7 @@
                             }
                             else
                             {
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.Unsuccessful))" class="vacancy-filter">
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsFilterTypes.Unsuccessful).RouteValues)" class="vacancy-filter">
                                     <figure class="data">
                                         <p class="count">@Model.UnsuccessfulApplicationsCount</p>
                                         <figcaption><h2>Unsuccessful</h2></figcaption>
@@ -197,17 +200,28 @@
 
             <table class="vert-top" id="applicationTable">
                 <colgroup>
-                    <col class="t25">
-                    <col class="t15">
-                    <col class="t15">
-                    <col class="t15">
-                    <col class="t15">
-                    <col class="t15">
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
                 </colgroup>
                 <thead>
                 <tr>
                     <th>
-                        <span class="font-black">Applicant name</span>
+                        @{
+                            var newOrder = Model.VacancyApplicationsSearch.Order == Order.Ascending ? Order.Descending : Order.Ascending;
+                            var sortClass = Model.VacancyApplicationsSearch.OrderByField == VacancyApplicationsSearchViewModel.OrderByFieldLastName ?
+                                Model.VacancyApplicationsSearch.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
+                        }
+                        <a href="@Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, VacancyApplicationsSearchViewModel.OrderByFieldLastName, newOrder).RouteValues)" class="vacancy-filter">
+                            <span class="font-black">Surname <i class="fa @sortClass" aria-hidden="true"></i></span>
+                        </a>
+                    </th>
+                    <th>
+                        <span class="font-black">First name</span>
                     </th>
                     <th>
                         <span class="font-black">Applicant ID</span>
@@ -230,7 +244,10 @@
                 {
                     <tr class="applicant">
                         <td>
-                            <h4 class="applicant-name">@applicationSummary.ApplicantName</h4>
+                            <h4 class="applicant-name">@applicationSummary.LastName</h4>
+                        </td>
+                        <td>
+                            <h4 class="applicant-name">@applicationSummary.FirstName</h4>
                         </td>
                         <td>
                             @applicationSummary.ApplicantID
@@ -250,7 +267,7 @@
                             @Html.Partial("_applicationStatus", applicationSummary.Status)
                         </td>
                         <td>
-                            <a href="@Url.RouteUrl(Model.VacancyType == VacancyType.Traineeship ? RecruitmentRouteNames.ReviewTraineeshipApplication : RecruitmentRouteNames.ReviewApprenticeshipApplication, new ApplicationSelectionViewModel(Model.VacancyApplicationsSearch, applicationSummary.ApplicationId))" title="View @applicationSummary.ApplicantName application">View application</a>
+                            <a href="@Url.RouteUrl(Model.VacancyType == VacancyType.Traineeship ? RecruitmentRouteNames.ReviewTraineeshipApplication : RecruitmentRouteNames.ReviewApprenticeshipApplication, new ApplicationSelectionViewModel(Model.VacancyApplicationsSearch, applicationSummary.ApplicationId))" title="View @applicationSummary.ApplicantName application">View application</a><br/>
                             <a href="@Url.RouteUrl(Model.VacancyType == VacancyType.Traineeship ? RecruitmentRouteNames.ViewAnonymousTraineeshipApplication : RecruitmentRouteNames.ViewAnonymousApprenticeshipApplication, new { application = applicationSummary.AnonymousLinkData })" title="View anonymous application">Anonymous view</a>
                         </td>
                     </tr>
@@ -265,8 +282,8 @@
         @{
             var currentPage = Model.ApplicationSummaries.CurrentPage;
             var totalNumberOfPages = Model.ApplicationSummaries.TotalNumberOfPages;
-            var prevLink = Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, currentPage - 1));
-            var nextLink = Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, currentPage + 1));
+            var prevLink = Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, currentPage - 1).RouteValues);
+            var nextLink = Url.RouteUrl(RecruitmentRouteNames.VacancyApplications, new VacancyApplicationsSearchViewModel(Model.VacancyApplicationsSearch, currentPage + 1).RouteValues);
         }
 
         <a href="@prevLink"
