--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Details.cshtml
@@ -117,11 +117,21 @@
                 </div>
                 <div class="grid grid-1-2 hide-print">
                     <div class="ad-details__map">
-                        <div class="map-overlay" onclick="style.pointerEvents='none'"></div>
-                        <iframe width="700" height="250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=@Html.Raw(Model.VacancyAddress.Postcode),+United+Kingdom&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
+                        <div class="map-overlay" onclick="style.pointerEvents = 'none'"></div>
+                        <iframe width="700" height="250" frameborder="0" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Html.Raw(Model.VacancyAddress.Postcode),+United+Kingdom&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
                         <p class="nojs-notice">You must have JavaScript enabled to view a map of the location</p>
                     </div>
                 </div>
+
+                @if (!string.IsNullOrWhiteSpace(Model.AdditionalLocationInformation))
+                {
+                    <div class="editable-item">
+                        <h3 class="bold-small">
+                            Additional location information
+                        </h3>
+                        <p>@Html.Raw(Model.AdditionalLocationInformation)</p>
+                    </div>
+                }
             </div>
         </section>
         <section class="section-border grid-wrapper" id="course-info">
